--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </style>
   </head>
   <body>
-    <audio src="https://ia601408.us.archive.org/17/items/GregorianChantMass/04Track4_64kb.mp3" autoplay>
+    <audio src="https://ia601408.us.archive.org/17/items/GregorianChantMass/04Track4_64kb.mp3" autoplay loop="true">
       Your browser does not support the <code>audio</code> element.
     </audio>
     <span id="🍕">🍕</span>
