Spin that pizza

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
         left: calc(50vw - 128px / 2);
         display: inline-block;
         position: absolute;
-        /*-webkit-animation: rotate 100s linear infinite;
+        -webkit-animation: rotate 100s linear infinite;
         -moz-animation: rotate 100s linear infinite;
         -ms-animation: rotate 100s linear infinite;
         -o-animation: rotate 100s linear infinite;
-        animation: rotate 100s linear infinite;*/
+        animation: rotate 100s linear infinite;
       }
 
-      /*@-webkit-keyframes rotate {
+      @-webkit-keyframes rotate {
         from {
           -webkit-transform: rotate(0deg);
         }
         to {
           -webkit-transform: rotate(360deg);
         }
-      }*/
+      }
     </style>
   </head>
   <body>
