Init pizzagram; Responsive fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<!--
+┌─┐┬┌─┐┌─┐┌─┐ ┌─┐┬ ┬┬ ┬┬─┐┌─┐┬ ┬
+├─┘│┌─┘┌─┘├─┤ │  ├─┤│ │├┬┘│  ├─┤
+┴  ┴└─┘└─┘┴ ┴o└─┘┴ ┴└─┘┴└─└─┘┴ ┴
+by preston richey
+ -->
   <head>
     <meta charset="utf-8">
     <title>⛪️</title>
@@ -14,43 +20,15 @@
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <style media="screen">
-      body {
-        margin: 0;
-        height: 100vh;
-        width: 100vw;
-      }
-
-      #🍕 {
-        font-size: 128px;
-        top: calc(50vh - 168px / 2);
-        left: calc(50vw - 128px / 2);
-        display: inline-block;
-        position: absolute;
-        -webkit-animation: rotate 100s linear infinite;
-        -moz-animation: rotate 100s linear infinite;
-        -ms-animation: rotate 100s linear infinite;
-        -o-animation: rotate 100s linear infinite;
-        animation: rotate 100s linear infinite;
-      }
-
-      @-webkit-keyframes rotate {
-        from {
-          -webkit-transform: rotate(0deg);
-        }
-        to {
-          -webkit-transform: rotate(360deg);
-        }
-      }
-    </style>
   </head>
   <body>
     <audio src="https://ia601408.us.archive.org/17/items/GregorianChantMass/04Track4_64kb.mp3" autoplay loop="true">
       Your browser does not support the <code>audio</code> element.
     </audio>
-    <span id="🍕">🍕</span>
+		<img id="🍕" src="assets/pizza.png" alt="🍕" />
   </body>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
