--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@ by preston richey
     <link rel="stylesheet" type="text/css" href="assets/style.css" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:title" content="🍕.⛪">
+    <meta property="og:site_name" content="🍕.⛪">
+    <meta property="og:url" content="http://pizza.church/">
+    <meta property="og:description" content="🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕">
+    <meta name="twitter:card" content="product">
+    <meta name="twitter:title" content="🍕.⛪">
+    <meta name="twitter:description" content="🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕">
+    <meta name="twitter:image:src" content="http://pizza.church/assets/meta.png">
   </head>
   <body>
     <audio src="https://ia601408.us.archive.org/17/items/GregorianChantMass/04Track4_64kb.mp3" autoplay loop="true">
       Your browser does not support the <code>audio</code> element.
     </audio>
-		<img id="🍕" src="assets/pizza.png" alt="🍕" />
+    <img id="🍕" src="assets/pizza.png" alt="🍕" />
   </body>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
