--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ by preston richey
     <link rel="stylesheet" type="text/css" href="assets/style.css" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="author" content="Preston Richey">
+    <meta name="description" content="🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕⛪🍕">
     <meta property="og:title" content="🍕.⛪">
     <meta property="og:site_name" content="🍕.⛪">
     <meta property="og:url" content="http://pizza.church/">
